update chinese website

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>Haozhe Li 李浩哲 - Student</title>  
+    <title>Haozhe Li - My Personal Website</title>  
     <meta name="keywords" content='Haozhe Li, 李浩哲, UIUC, Computer Science'>
     <meta name="description" content='Personal website of Haozhe Li'>
     <meta name="author" content='Haozhe Li'>
@@ -67,7 +67,7 @@
                 <a class="nav-link js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
               </li>
 	    <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="http://webtrans.yodao.com/webTransPc/index.html?from=auto&to=auto&type=1&url=https%3A%2F%2Fwww.haozheli.com#/">简体中文</a>
+                <a class="nav-link js-scroll-trigger" href="https://haozhe-li.github.io/zh">简体中文</a>
               </li>
           </ul>
         </div>
