--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <a class="nav-link js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
               </li>
 	    <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://haozhe-li.github.io/zh">简体中文</a>
+                <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/zh/">简体中文</a>
               </li>
           </ul>
         </div>
