--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">Bilibili</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">Youtube</a>
                         <a href="mailto@website.hao-zhe.li@outlook.com">Email</a>
-                        <a href="https://welogmedia.notion.site/Website-Log-ea2b64fe7c204d28b7ca9ec54ff905c9">Website Log</a>
+                        <a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io/commits/main">Website Log</a>
                     </p>
                     <p class="footer-company-name">All Rights Reserved. &copy; 2022 <a href="#">Haozhe Li</a> <br>Powered By : 
 					<a href="https://github.io/">Github Pages</a> and <a href="https://www.haozheli.com/">My Fantastic Brain</a></p>
