--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
                         <a href="#">Helpful Links: </a>
                         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">Bilibili</a>
                         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">Youtube</a>
+                        <a href="https://welogstudio.cn">WeLog Studio</a>
                         <a href="mailto@website.hao-zhe.li@outlook.com">Email</a>
                         <a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io/commits/main">Website Log</a>
                     </p>
