--- a/index.html
+++ b/index.html
@@ -262,11 +262,10 @@
             <div class="footer-distributed">
                 <div class="footer-left">
                     <p class="footer-links">
-                        <a href="#">Helpful Links: </a>
-                        <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0">Bilibili</a>
-                        <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog">Youtube</a>
-                        <a href="https://welogstudio.cn">WeLog Studio</a>
-                        <a href="mailto@website.hao-zhe.li@outlook.com">Email</a>
+                        <a href="#">Navigation: </a>
+                        <a href="https://www.haozheli.com">Back to Home</a>
+                        <a href="https://www.haozheli.com/contact">Contact & Subscribe</a>
+                        <a href="https://www.haozheli.com/download">Download</a>
                         <a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io/commits/main">Website Log</a>
                     </p>
                     <p class="footer-company-name">All Rights Reserved. &copy; 2022 <a href="#">Haozhe Li</a> <br>Powered By : 
