--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
               </li>
-	    <li class="nav-item">
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/contact">CONTACT & SUBSCRIBE</a>
+              </li> 
+	        <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/zh/">简体中文</a>
               </li>
           </ul>
@@ -125,7 +128,7 @@
                         <p> Hi, I'm Haozhe Li, or Howard, and I'm a computer science and music major at the University of Illinois.	"A cellist who loves programming" is the most accurate statement that can define me. I have studied cello since I was a child and participated in symphony orchestras for almost 10 years as a principal cellist. After entering college life, I gradually became interested in computer programming and began to learn programming languages such as Python and Java.</p>
 						<p> I am also a personal video creator, I often upload tutorials on VLOG, cinematic shots and video editing effects on Bilibili and Youtube， and have received millions of views.</p>
 
-                        <a href="https://www.haozheli.com/contact" class="sim-btn btn-hover-new" data-text="VIEW MORW"><span>CONTACT & SUBSCRIBE</span></a>
+                        <a href="https://www.haozheli.com/contact" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>CONTACT & SUBSCRIBE</span></a>
                     </div><!-- end messagebox -->
                     <p>Personal Email: website.hao-zhe.li@outlook.com</p>
                 </div><!-- end col -->
