--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/contact">CONTACT & SUBSCRIBE</a>
               </li> 
 	        <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/zh/">简体中文</a>
+                <a class="nav-link js-scroll-trigger" href="https://www-haozheli-com.translate.goog/?_x_tr_sl=auto&_x_tr_tl=zh-CN&_x_tr_hl=en&_x_tr_pto=wapp">简体中文</a>
               </li>
           </ul>
         </div>
@@ -167,7 +167,7 @@
 						<img src="uploads/portfolio_coding_Website.jpg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">My Personal Website</div>
 						<div class="img-overlay">
-							<a href="" class="hoverbutton global-radius">VIEW</a>
+							<a href="uploads/personalWebsite.html" class="hoverbutton global-radius">VIEW</a>
 						</div>
 					</div>
 				</div>
