--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 						<img src="uploads/portfolio_music_despacito.jpg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">Despacito - Duo Cello Cover</div>
 						<div class="img-overlay">
-							<a href="https://www.bilibili.com/video/BV1SJ411J76M/" class="hoverbutton global-radius">VIEW</a>
+							<a href="uploads/despacito.html" class="hoverbutton global-radius">VIEW</a>
 						</div>
 					</div>
 				</div>
