--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">ABOUT ME</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
+                <a class="nav-link js-scroll-trigger" href="#resume">RESUME</a>
               </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/contact">CONTACT & SUBSCRIBE</a>
@@ -141,11 +141,11 @@
         </div><!-- end container -->
     </div><!-- end section -->
 
-    <div id="portfolio" class="section lb">
+    <div id="resume" class="section lb">
 		<div class="container">
 			<div class="section-title text-left">
-                <h3>PORTFOLIO</h3>
-                <p>Take a quick look!</p>
+                <h3>RESUME</h3>
+                <p>Take a quick look of my portfolio, or view my <a href="https://www.haozheli.com/uploads/resume.html">OFFICIAL RESUME</a></p>
             </div><!-- end title -->
 			
 			<div class="gallery-menu row">
