--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <a class="nav-link js-scroll-trigger" href="#resume">RESUME</a>
               </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/contact">CONTACT & SUBSCRIBE</a>
+                <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/contact">CONTACT</a>
               </li> 
 	        <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www-haozheli-com.translate.goog/?_x_tr_sl=auto&_x_tr_tl=zh-CN&_x_tr_hl=en&_x_tr_pto=wapp">简体中文</a>
@@ -126,10 +126,10 @@
                         <h2><b>ABOUT ME</b></h2>
                         <p> Hi, I'm Haozhe Li, or Howard, and I'm a computer science and music major at the University of Illinois.	"A cellist who loves programming" is the most accurate statement that can define me. I have studied cello since I was a child and participated in symphony orchestras for almost 10 years as a principal cellist. After entering college life, I gradually became interested in computer programming and began to learn programming languages such as Python and Java.</p>
 						<p> I am also a personal video creator, I often upload tutorials on VLOG, cinematic shots and video editing effects on Bilibili and Youtube， and have received millions of views.</p>
-
-                        <a href="https://www.haozheli.com/contact" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>CONTACT & SUBSCRIBE</span></a>
+                        <p>Quick Links: </p>
+                        <a href="https://www.haozheli.com/contact" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>CONTACT</span></a>
+                        <a href="#resume" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>RESUME</span></a>
                     </div><!-- end messagebox -->
-                    <p>Personal Email: website.hao-zhe.li@outlook.com</p>
                 </div><!-- end col -->
 
                 <div class="col-md-6">
