update of resume

--- a/index.html
+++ b/index.html
@@ -162,6 +162,16 @@
 			
 			<div class="gallery-list row">
 
+                <div class="col-md-4 col-sm-6 gallery-grid coding">
+					<div class="gallery-single fix">
+						<img src="uploads/machineProject.jpg" class="img-fluid" alt="pic of portfolio">
+						<div align="center">Machine Project CS 124</div>
+						<div class="img-overlay">
+							<a href="uploads/machineProject.html" class="hoverbutton global-radius">VIEW</a>
+						</div>
+					</div>
+				</div>
+
                			<div class="col-md-4 col-sm-6 gallery-grid coding">
 					<div class="gallery-single fix">
 						<img src="uploads/portfolio_coding_Website.jpg" class="img-fluid" alt="pic of portfolio">
@@ -187,7 +197,7 @@
 						<img src="uploads/portfolio_video_qingdao.png" class="img-fluid" alt="pic of portfolio">
 						<div align="center">QingDao Summer - Cinematic Video</div>
 						<div class="img-overlay">
-							<a href="https://www.bilibili.com/video/BV1ba411u79C/" class="hoverbutton global-radius">VIEW</a>
+							<a href="uploads/qingDao.html" class="hoverbutton global-radius">VIEW</a>
 						</div>
 					</div>
 				</div>
@@ -197,7 +207,7 @@
 						<img src="uploads/portfolio_video_90seffects.jpg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">Visual Effects in 90 seconds</div>
 						<div class="img-overlay">
-							<a href="https://www.bilibili.com/video/BV13q4y1g7qB/" class="hoverbutton global-radius">VIEW</a>
+							<a href="uploads/visualEffectsIn90Seconds.html" class="hoverbutton global-radius">VIEW</a>
 						</div>
 					</div>
 				</div>
@@ -208,7 +218,7 @@
 						<img src="uploads/portfolio_video_iphone14.png" class="img-fluid" alt="pic of portfolio">
 						<div align="center">iPhone 14 Pro with Dolby Vision</div>
 						<div class="img-overlay">
-							<a href="https://b23.tv/vukj84P" class="hoverbutton global-radius">VIEW</a>
+							<a href="uploads/iphone14ProWithDolbyVision.html" class="hoverbutton global-radius">VIEW</a>
 						</div>
 					</div>
 				</div>
@@ -218,7 +228,7 @@
 						<img src="uploads/portfolio_video_beijing.jpg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">Beijing Winter - Cinematic Vlog</div>
 						<div class="img-overlay">
-							<a href="https://www.bilibili.com/video/BV1Ha411y7Zf/" class="hoverbutton global-radius">VIEW</a>
+							<a href="uploads/beijingWinter.html" class="hoverbutton global-radius">VIEW</a>
 						</div>
 					</div>
 				</div>
@@ -228,7 +238,7 @@
 						<img src="uploads/portfolio_video_automation.jpg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">Automation - Davinci Resolve Tutorial</div>
 						<div class="img-overlay">
-							<a href="https://www.bilibili.com/video/BV1pu41167CU/" class="hoverbutton global-radius">VIEW</a>
+							<a href="uploads/automation.html" class="hoverbutton global-radius">VIEW</a>
 						</div>
 					</div>
 				</div>
@@ -238,7 +248,7 @@
 						<img src="uploads/portfolio_video_slomotion.jpg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">Slomotion - Davinci Resolve Tutorial</div>
 						<div class="img-overlay">
-							<a href="https://www.bilibili.com/video/BV1iq4y1m7fj/" class="hoverbutton global-radius">VIEW</a>
+							<a href="uploads/slomotion.html" class="hoverbutton global-radius">VIEW</a>
 						</div>
 					</div>
 				</div>
@@ -248,7 +258,7 @@
 						<img src="uploads/portfolio_video_magicmask.jpg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">MagicMask - Davinci Resolve Tutorial</div>
 						<div class="img-overlay">
-							<a href="https://www.bilibili.com/video/BV1yb4y1b7rf/" class="hoverbutton global-radius">VIEW</a>
+							<a href="uploads/magicMask.html" class="hoverbutton global-radius">VIEW</a>
 						</div>
 					</div>
 				</div>
