--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		<div class="container">
 			<div class="section-title text-left">
                 <h3>RESUME</h3>
-                <p>Take a quick look of my portfolio, or view my <a href="https://www.haozheli.com/uploads/resume.html">OFFICIAL RESUME</a></p>
+                <p>Take a quick look of my portfolio, or view my <a href="https://www.haozheli.com/uploads/Haozhe Li_Resume.pdf">OFFICIAL RESUME</a></p>
             </div><!-- end title -->
 			
 			<div class="gallery-menu row">
