--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 						<img src="uploads/portfolio_coding_Website.jpeg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">My Personal Website</div>
 						<div class="img-overlay">
-							<a href="uploads/personalWebsite.html" class="hoverbutton global-radius">GO</a>
+							<a href="https://welogmedia.notion.site/Personal-Website-6c5ad400216148b1a1dda0e49ca0ee93" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -197,7 +197,7 @@
 						<img src="uploads/portfolio_music_despacito.jpeg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">Despacito - Duo Cello Cover</div>
 						<div class="img-overlay">
-							<a href="uploads/despacito.html" class="hoverbutton global-radius">GO</a>
+							<a href="https://welogmedia.notion.site/Despacito-5efb83ffcef64890b3f68d17b8c229e1" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -207,7 +207,7 @@
 						<img src="uploads/portfolio_video_qingdao.jpeg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">QingDao Summer - Cinematic Video</div>
 						<div class="img-overlay">
-							<a href="uploads/qingDao.html" class="hoverbutton global-radius">GO</a>
+							<a href="https://welogmedia.notion.site/QingDao-Summer-96ff69f797c64344909c7fa0b26041fd" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -217,7 +217,7 @@
 						<img src="uploads/portfolio_video_90seffects.jpeg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">Visual Effects in 90 seconds</div>
 						<div class="img-overlay">
-							<a href="uploads/visualEffectsIn90Seconds.html" class="hoverbutton global-radius">GO</a>
+							<a href="" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -228,7 +228,7 @@
 						<img src="uploads/portfolio_video_iphone14.jpeg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">iPhone 14 Pro with Dolby Vision</div>
 						<div class="img-overlay">
-							<a href="uploads/iphone14ProWithDolbyVision.html" class="hoverbutton global-radius">GO</a>
+							<a href="" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -238,7 +238,7 @@
 						<img src="uploads/portfolio_video_beijing.jpeg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">Beijing Winter - Cinematic Vlog</div>
 						<div class="img-overlay">
-							<a href="uploads/beijingWinter.html" class="hoverbutton global-radius">GO</a>
+							<a href="" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -248,7 +248,7 @@
 						<img src="uploads/portfolio_video_automation.jpeg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">Automation - Davinci Resolve Tutorial</div>
 						<div class="img-overlay">
-							<a href="uploads/automation.html" class="hoverbutton global-radius">GO</a>
+							<a href="" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -258,7 +258,7 @@
 						<img src="uploads/portfolio_video_slomotion.jpeg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">Slomotion - Davinci Resolve Tutorial</div>
 						<div class="img-overlay">
-							<a href="uploads/slomotion.html" class="hoverbutton global-radius">GO</a>
+							<a href="" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -268,7 +268,7 @@
 						<img src="uploads/portfolio_video_magicmask.jpeg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">MagicMask - Davinci Resolve Tutorial</div>
 						<div class="img-overlay">
-							<a href="uploads/magicMask.html" class="hoverbutton global-radius">GO</a>
+							<a href="" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
