--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 						<img src="uploads/machineProject.jpeg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">Machine Project CS 124</div>
 						<div class="img-overlay">
-							<a href="uploads/machineProject.html" class="hoverbutton global-radius">GO</a>
+							<a href="https://welogmedia.notion.site/Machine-Project-27c1422089464f2582673488259d6ea1" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -177,7 +177,7 @@
 						<img src="uploads/znotes.jpeg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">ZNotes Contribution</div>
 						<div class="img-overlay">
-							<a href="uploads/znotesContribution.html" class="hoverbutton global-radius">GO</a>
+							<a href="https://www.notion.so/welogmedia/ZNotes-Contribution-6c16cdc26f09471a94eb2af2d485d0a2" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
