--- a/index.html
+++ b/index.html
@@ -192,6 +192,16 @@
 					</div>
 				</div>
 
+				<div class="col-md-4 col-sm-6 gallery-grid video">
+					<div class="gallery-single fix">
+						<img src="uploads/seattle.jpeg" class="img-fluid" alt="pic of portfolio">
+						<div align="center">7 Days in Seattle - Cinematic VLOG</div>
+						<div class="img-overlay">
+							<a href="" class="hoverbutton global-radius">GO</a>
+						</div>
+					</div>
+				</div>
+
                 <div class="col-md-4 col-sm-6 gallery-grid music">
 					<div class="gallery-single fix">
 						<img src="uploads/portfolio_music_despacito.jpeg" class="img-fluid" alt="pic of portfolio">
