--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 						<img src="uploads/seattle.jpeg" class="img-fluid" alt="pic of portfolio">
 						<div align="center">7 Days in Seattle - Cinematic VLOG</div>
 						<div class="img-overlay">
-							<a href="" class="hoverbutton global-radius">GO</a>
+							<a href="https://welogmedia.notion.site/7-Days-in-Seattle-17fd6ed64fa54c029dd4c3f565160363" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
