--- a/index.html
+++ b/index.html
@@ -162,6 +162,16 @@
 			
 			<div class="gallery-list row">
 
+				<div class="col-md-4 col-sm-6 gallery-grid coding academics">
+					<div class="gallery-single fix">
+						<img src="uploads/relatedCourses.jpeg" class="img-fluid" alt="pic of portfolio">
+						<div align="center">Related Courses</div>
+						<div class="img-overlay">
+							<a href="https://haozheli.notion.site/Related-Course-18c955eaa2e94f0a967aecaa0c255924" class="hoverbutton global-radius">GO</a>
+						</div>
+					</div>
+				</div>
+
                 <div class="col-md-4 col-sm-6 gallery-grid coding academics">
 					<div class="gallery-single fix">
 						<img src="uploads/machineProject.jpeg" class="img-fluid" alt="pic of portfolio">
