--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
               <a class="nav-link js-scroll-trigger active" href="#home">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">ABOUT ME</a>
+              <a class="nav-link js-scroll-trigger" href="#about">ABOUT</a>
             </li>
+			<li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#education">EDUCATION</a>
+              </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#resume">RESUME</a>
+                <a class="nav-link js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
               </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/contact">CONTACT</a>
               </li> 
-	        <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www-haozheli-com.translate.goog/?_x_tr_sl=auto&_x_tr_tl=zh-CN&_x_tr_hl=en&_x_tr_pto=wapp">简体中文</a>
-              </li>
           </ul>
         </div>
       </div>
@@ -141,10 +141,74 @@
         </div><!-- end container -->
     </div><!-- end section -->
 
-    <div id="resume" class="section lb">
+	<div id="education" class="section wb">
+        <div class="container">
+            <div class="section-title text-left">
+                <h3>EDUCATION</h3>
+                <p>Please view my related courses here!</p>
+            </div><!-- end title -->
+
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <div class="testi-carousel owl-carousel owl-theme">
+                        
+						<div class="testimonial clearfix">
+                            <div class="desc">
+                                <h3><i class="fa fa-quote-left"></i> 2022 Fall</h3>
+                                <p class="lead">CS 124 Introduction to Computer Science I - A<br>MATH 220 Calculus - A+
+								<br>MUS 101 Music Theory and Practice I - A+<br>MUS 107 Musicianship I - A+<br>MUS 100 First-year Seminar for Music Majors - S<br>
+								FAA 101 Arts at Illinois - A
+								</p>
+                            </div>
+                            <div class="testi-meta">
+                                <img src="uploads/testi_01.png" alt="" class="img-fluid alignleft">
+                                <h4>GPA: 4.0</h4>
+                            </div>
+                            <!-- end testi-meta -->
+                        </div>
+                        <!-- end testimonial -->
+
+                        <div class="testimonial clearfix">
+                            <div class="desc">
+                                <h3><i class="fa fa-quote-left"></i> 2023 Spring</h3>
+                                <p class="lead">CS 128 Introduction to Computer Science II - IP<br>
+												CS 173 Discrete Structure - IP<br>
+												MUS 105 Computation and Music I - IP<br>
+												MUS 102 Music Theory and Practice II - IP<br>
+												MUS 108 Musicianship II - IP<br>
+												ESL 111 Intro to Academic Writing I - IP
+												</p>
+                            </div>
+                            <div class="testi-meta">
+                                <img src="uploads/testi_03.png" alt="" class="img-fluid alignleft">
+                                <h4>GPA: IP</h4>
+                            </div>
+                            <!-- end testi-meta -->
+                        </div><!-- end testimonial -->
+
+						<div class="testimonial clearfix">
+                            <div class="desc">
+                                <h3><i class="fa fa-quote-left"></i> 2023 Fall</h3>
+                                <p class="lead">Not Started Yet!</p>
+                            </div>
+                            <div class="testi-meta">
+                                <img src="uploads/testi_01.png" alt="" class="img-fluid alignleft">
+                                <h4>GPA: Not Started Yet!</h4>
+                            </div>
+                            <!-- end testi-meta -->
+                        </div>
+                        <!-- end testimonial -->
+
+                    </div><!-- end carousel -->
+                </div><!-- end col -->
+            </div><!-- end row -->
+        </div><!-- end container -->
+    </div><!-- end section -->
+
+    <div id="portfolio" class="section lb">
 		<div class="container">
 			<div class="section-title text-left">
-                <h3>RESUME</h3>
+                <h3>PORTFOLIO</h3>
                 <p>Take a quick look of my portfolio, or view my <a href="uploads/Haozhe Li_Resume.pdf">OFFICIAL RESUME</a></p>
             </div><!-- end title -->
 			
@@ -161,16 +225,6 @@
 			</div>
 			
 			<div class="gallery-list row">
-
-				<div class="col-md-4 col-sm-6 gallery-grid coding academics">
-					<div class="gallery-single fix">
-						<img src="uploads/relatedCourses.jpeg" class="img-fluid" alt="pic of portfolio">
-						<div align="center">Related Courses</div>
-						<div class="img-overlay">
-							<a href="https://haozheli.notion.site/Related-Course-18c955eaa2e94f0a967aecaa0c255924" class="hoverbutton global-radius">GO</a>
-						</div>
-					</div>
-				</div>
 
                 <div class="col-md-4 col-sm-6 gallery-grid coding academics">
 					<div class="gallery-single fix">
