--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
     </nav>
 	
-	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.jpg')">
+	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.jpeg')">
 		<div class="heading">
 			<h1>ALOHA, I'm Haozhe LI</h1>
 			<p>Currently studying Computer Science and Music<br>at U of I Urbana-Champaign</p>
