--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
 						<button class="active" data-filter="*">All</button>
 						<button data-filter=".academics">ACADEMICS</button>
 						<button data-filter=".coding">CODING</button>
-						<button data-filter=".video">VIDEO</button>
-						<button data-filter=".music">MUSIC</button>
+						<button data-filter=".video">IMAGE</button>
+						<button data-filter=".music">AUDIO</button>
 					</div>
 				</div>
 			</div>
