--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.jpeg')">
 		<div class="heading">
 			<h1>ALOHA, I'm Haozhe LI</h1>
-			<p>Currently studying Computer Science and Music<br>at U of I Urbana-Champaign</p>
+			<!--
+            <p>Currently studying Computer Science and Music<br>at U of I Urbana-Champaign</p>
+            -->
+            <p>On the first day of the year 2023, my grandfather left this world. <br>So until January 7, the site will turn gray in memory of my dear grandfather.</p>
 			<h3 class="cd-headline clip is-full-width">
 				<span>I love </span>
 				<span class="cd-words-wrapper">
