--- a/index.html
+++ b/index.html
@@ -208,7 +208,6 @@
 				<div class="col-md-12">
 					<div class="button-group filter-button-group text-left">
 						<button class="active" data-filter="*">All</button>
-						<button data-filter=".academics">ACADEMICS</button>
 						<button data-filter=".coding">CODING</button>
 						<button data-filter=".video">IMAGE</button>
 						<button data-filter=".audio">AUDIO</button>
@@ -218,7 +217,7 @@
 			
 			<div class="gallery-list row">
 
-                <div class="col-md-4 col-sm-6 gallery-grid coding academics">
+                <div class="col-md-4 col-sm-6 gallery-grid coding">
 					<div class="gallery-single fix">
 						<img src="uploads/machineProject.png" class="img-fluid" alt="pic of portfolio">
 						<div class="img-overlay">
