--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">ABOUT</a>
             </li>
 			<li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#education">EDUCATION</a>
+                <a class="nav-link js-scroll-trigger" href="#resume">RESUME</a>
               </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
@@ -144,11 +144,11 @@
         </div><!-- end container -->
     </div><!-- end section -->
 
-	<div id="education" class="section wb">
+	<div id="resume" class="section wb">
         <div class="container">
             <div class="section-title text-left">
-                <h3>EDUCATION</h3>
-                <p align="center"><b>University of Illinois Urbana-Champaign</b><br><i>BS in Computer Science + Music 2022 - 2026</i></p>
+                <h3>RESUME</h3>
+                <p align="center">You can view my <a href="uploads/Haozhe Li_Resume.pdf">OFFICIAL RESUME</a> here.</p>
             </div><!-- end title -->
 
             <div class="row">
@@ -157,10 +157,11 @@
                         
 						<div class="testimonial clearfix">
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Related Courses (1/3)</h3>
-                                <p class="lead">CS 124 Introduction to Computer Science I - A<br>MATH 220 Calculus - A+
-								<br>MUS 101 Music Theory and Practice I - A+<br>MUS 107 Musicianship I - A+
-								</p>
+                                <h3><i class="fa fa-quote-left"></i> Education (1/3)</h3>
+                                <p class="lead">University of Illinois Urbana-Champaign
+                                <br>BS in Computer Science + Music 2022 - 2026
+                                <br>Current GPA: 4.0
+                                <br><br></p>
                             </div>
                             <div class="testi-meta">
                                 <a href="https://haozheli.notion.site/Related-Course-18c955eaa2e94f0a967aecaa0c255924"><b>VIEW MORE</b></a>
@@ -172,7 +173,7 @@
                         <div class="testimonial clearfix">
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i>Experience (2/3)</h3>
-                                <p class="lead">ZNotes Content Contribution<br>-<br>-<br>-</p>
+                                <p class="lead">ZNotes Content Contribution<br><br><br><br></p>
                             </div>
                             <div class="testi-meta">
                                 <a href=https://haozheli.notion.site/Experience-6c16cdc26f09471a94eb2af2d485d0a2"><b>VIEW MORE</b></a>
@@ -183,7 +184,7 @@
                         <div class="testimonial clearfix">
                             <div class="desc">
                                 <h3><i class="fa fa-quote-left"></i>Intern (3/3)</h3>
-                                <p class="lead">Nothing Yet.<br>Still trying to find one!<br>-<br>-</p>
+                                <p class="lead">Nothing Yet.<br>Still trying to find one!<br><br><br></p>
                             </div>
                             <div class="testi-meta">
                                 <a href=""><b>VIEW MORE</b></a>
