--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="container">
             <div class="section-title text-left">
                 <h3>RESUME</h3>
-                <p align="center">You can view my <a href="uploads/Haozhe Li_Resume.pdf">OFFICIAL RESUME</a> here.</p>
+                <p align="center">View my <a href="uploads/Haozhe Li_Resume.pdf">OFFICIAL RESUME</a> here.</p>
             </div><!-- end title -->
 
             <div class="row">
