--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
                         
 						<div class="testimonial clearfix">
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Education (1/3)</h3>
+                                <h3><i class="fa fa-quote-left"></i> Education (1/4)</h3>
                                 <p class="lead">University of Illinois Urbana-Champaign
                                 <br>BS in Computer Science + Music 2022 - 2026
                                 <br>Current GPA: 4.0
                                 <br><br></p>
                             </div>
                             <div class="testi-meta">
-                                <a href="https://haozheli.notion.site/Related-Course-18c955eaa2e94f0a967aecaa0c255924"><b>VIEW MORE</b></a>
+                                <a href="blogs/education.html"><b>VIEW MORE</b></a>
                             </div>
                             <!-- end testi-meta -->
                         </div>
@@ -172,22 +172,33 @@
 
                         <div class="testimonial clearfix">
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i>Experience (2/3)</h3>
-                                <p class="lead">ZNotes Content Contribution<br><br><br><br></p>
+                                <h3><i class="fa fa-quote-left"></i>Skills (2/4)</h3>
+                                <p class="lead">Programming: Java, Python<br>Language: Native in English and Chinese<br>Filmaking<br>Music Production<br></p>
                             </div>
                             <div class="testi-meta">
-                                <a href=https://haozheli.notion.site/Experience-6c16cdc26f09471a94eb2af2d485d0a2"><b>VIEW MORE</b></a>
+                                <a href="blogs/skills.html"><b>VIEW MORE</b></a>
                             </div>
                             <!-- end testi-meta -->
                         </div><!-- end testimonial -->
 
                         <div class="testimonial clearfix">
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i>Intern (3/3)</h3>
+                                <h3><i class="fa fa-quote-left"></i>Experience (3/4)</h3>
+                                <p class="lead">ZNotes Content Contribution<br><br><br><br></p>
+                            </div>
+                            <div class="testi-meta">
+                                <a href="blogs/experience.html"><b>VIEW MORE</b></a>
+                            </div>
+                            <!-- end testi-meta -->
+                        </div><!-- end testimonial -->
+
+                        <div class="testimonial clearfix">
+                            <div class="desc">
+                                <h3><i class="fa fa-quote-left"></i>Intern (4/4)</h3>
                                 <p class="lead">Nothing Yet.<br>Still trying to find one!<br><br><br></p>
                             </div>
                             <div class="testi-meta">
-                                <a href=""><b>VIEW MORE</b></a>
+                                <a href="blogs/intern.html"><b>VIEW MORE</b></a>
                             </div>
                             <!-- end testi-meta -->
                         </div><!-- end testimonial -->
