--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 		<div class="container">
 			<div class="section-title text-left">
                 <h3>PORTFOLIO</h3>
-                <p>Take a quick look of my portfolio, or view my <a href="uploads/Haozhe Li_Resume.pdf">OFFICIAL RESUME</a></p>
+                <p>Take a quick look of my portfolio</p>
             </div><!-- end title -->
 			
 			<div class="gallery-menu row">
@@ -233,7 +233,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/machineProject.png" class="img-fluid" alt="pic of portfolio">
 						<div class="img-overlay">
-							<a href="" class="hoverbutton global-radius">GO</a>
+							<a href="blogs/MP_CS124.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -242,7 +242,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/personalWebsite.png" class="img-fluid" alt="pic of portfolio">
 						<div class="img-overlay">
-							<a href="" class="hoverbutton global-radius">GO</a>
+							<a href="blogs/personalWebsite.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -260,7 +260,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/photography.png" class="img-fluid" alt="pic of portfolio">
 						<div class="img-overlay">
-							<a href="" class="hoverbutton global-radius">GO</a>
+							<a href="blogs/photography.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -269,7 +269,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/tutorial.png" class="img-fluid" alt="pic of portfolio">
 						<div class="img-overlay">
-							<a href="" class="hoverbutton global-radius">GO</a>
+							<a href="blogs/tutorial.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -278,7 +278,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/musicProduction.png" class="img-fluid" alt="pic of portfolio">
 						<div class="img-overlay">
-							<a href="" class="hoverbutton global-radius">GO</a>
+							<a href="blogs/vlog.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
