--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/vlog.png" class="img-fluid" alt="pic of portfolio">
 						<div class="img-overlay">
-							<a href="" class="hoverbutton global-radius">GO</a>
+							<a href="blogs/vlog.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
@@ -278,7 +278,7 @@
 					<div class="gallery-single fix">
 						<img src="uploads/musicProduction.png" class="img-fluid" alt="pic of portfolio">
 						<div class="img-overlay">
-							<a href="blogs/vlog.html" class="hoverbutton global-radius">GO</a>
+							<a href="blogs/musicProduction.html" class="hoverbutton global-radius">GO</a>
 						</div>
 					</div>
 				</div>
