--- a/blogs/qingdaoSummer.html
+++ b/blogs/qingdaoSummer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>Experience</title>
+<title>Qingdao Summer</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -458,16 +458,26 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        EXP                  </div>
+                        VLOG                   </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        ZNotes Content Contribution                 </p>
+                        Qingdao Summer                  </p>
+                    <p>At the beginning of June, I went to Qingdao for a short trip after I graduated from high school.<br> The video supports DolbyVision 4K.</p>
+                    <p><br></p>    
 
-                    <a href="znotes.html">
+                    <a href="https://www.bilibili.com/video/BV1ba411u79C/">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            VIEW MORE
+                            BILIBILI
+                        </button>
+                    </a>
+
+                    <p><br></p>
+
+                    <a href="https://www.youtube.com/watch?v=fdMdneL_YtU">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            YOUTUBE
                         </button>
                     </a>
 
@@ -475,7 +485,7 @@
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('https://www.haozheli.com/uploads/experience.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('https://www.haozheli.com/uploads/qingdao.jpeg');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
