--- a/blogs/znotes.html
+++ b/blogs/znotes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>Experience</title>
+<title>Znotes Contribution</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -458,24 +458,42 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        EXP                  </div>
+                        EXP                   </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
                         ZNotes Content Contribution                 </p>
+                    <p>In high school, I had a keen interest in physics and did well academically. So I joined Znotes, a global community-led learning platform and helped them create and revise their A2 physics-related notes. As of now, I have written chapters on A2 astrophysics, quantum physics, and atomic physics, and revised electromagnetism as well as thermodynamics.</p>    
+                    
+                    <p><br></p>
 
-                    <a href="znotes.html">
+                    <a href="https://znotes.org/caie/a2-level/physics-9702/theory/motion-in-a-circle/">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            VIEW MORE
+                            VIEW MY NOTES
                         </button>
                     </a>
 
+                    <p><br></p>
+
+                    <a href="https://znotes.org/team/#">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            VIEW MY CONTRIBUTION PAGE
+                        </button>
+                    </a>
+
+                    <p><br></p>
+
+                    <a href="https://www.haozheli.com/uploads/Haozhe Li_znotesCertificate.pdf">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            VIEW MY CERTIFICATE
+                        </button>
+                    </a>
                 </div>
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('https://www.haozheli.com/uploads/experience.png');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('https://www.haozheli.com/uploads/znotes.jpeg');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
