--- a/blogs/MP_CS124.html
+++ b/blogs/MP_CS124.html
@@ -458,16 +458,32 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        404                    </div>
+                        MP                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        Whops! It seems that you have come to a place where I have not yet ventured                  </p>
+                        Machine Project is a very important part of CS124 and one of my favorite parts. In MP3, we can add some custom features to the Android program. Here is my introduction to the features, and the DEMO of the Android program              </p>
 
-                    <a href="https://www.haozheli.com">
+                    <a href="https://www.bilibili.com/video/BV1ad4y1s7yu/?vd_source=50c60dd066c2d71108664951f25b60a4">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            BACK TO HOME
+                            BILIBILI
+                        </button>
+                    </a>
+
+                    <p><br></p>
+
+                    <a href="https://www.youtube.com/watch?v=M_Th3Cp8p5c">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            YOUTUBE
+                        </button>
+                    </a>
+
+                    <p><br></p>
+
+                    <a href="https://www.haozheli.com/uploads/demo.apk">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                            DOWNLOAD DEMO
                         </button>
                     </a>
                 </div>
