--- a/blogs/personalWebsite.html
+++ b/blogs/personalWebsite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>404 Not Found</title>
+<title>Personal Website</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -458,18 +458,27 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        404                    </div>
+                        WEB                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        Whops! It seems that you have come to a place where I have not yet ventured                  </p>
+I built my personal website in my spare time. I am very weak in HTML and CSS programming, and most of the pages in this site I learned by following the tutorials on Google. This site is built on Github Pages, so you can also see the public Repository of this site on Github. Enjoy!                </p>
 
-                    <a href="https://www.haozheli.com">
+                    <a href="https://www.haozheli.com/">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            BACK TO HOME
+                        VISIT MY WEBSITE
                         </button>
                     </a>
+
+                    <p><br></p>
+
+                    <a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io">
+                        <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
+                        VIEW IN GITHUB
+                        </button>
+                    </a>
+
                 </div>
             </div>
 
