--- a/blogs/qingdaoSummer.html
+++ b/blogs/qingdaoSummer.html
@@ -463,8 +463,10 @@
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        Qingdao Summer                  </p>
-                    <p>At the beginning of June, I went to Qingdao for a short trip after I graduated from high school.<br> The video supports DolbyVision 4K.</p>
+                        At the beginning of June, I went to Qingdao for a short trip after I graduated from high school.
+The video supports DolbyVision 4K.
+               </p>
+                    
                     <p><br></p>    
 
                     <a href="https://www.bilibili.com/video/BV1ba411u79C/">
