--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/contact">CONTACT</a>
               </li> 
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="CN.html">中文</a>
+              </li>   
           </ul>
         </div>
       </div>
