--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a class="nav-link js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
               </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/contact">CONTACT</a>
+                <a class="nav-link js-scroll-trigger" href="https://www.haozheli.com/contact.html">CONTACT</a>
               </li> 
               <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="CN.html">中文</a>
@@ -133,7 +133,7 @@
                         <p> Hi, I'm Haozhe Li, or Howard, and I'm a computer science and music major at the University of Illinois.	"A cellist who loves programming" is the most accurate statement that can define me. I have studied cello since I was a child and participated in symphony orchestras for almost 10 years as a principal cellist. After entering college life, I gradually became interested in computer programming and began to learn programming languages such as Python and Java.</p>
 						<p> I am also a personal video creator, I often upload tutorials on VLOG, cinematic shots and video editing effects on Bilibili and Youtube， and have received millions of views.</p>
                         <p>Quick Links: </p>
-                        <a href="https://www.haozheli.com/contact" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>CONTACT</span></a>
+                        <a href="https://www.haozheli.com/contact.html" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>CONTACT</span></a>
                         <a href="#resume" class="sim-btn btn-hover-new" data-text="VIEW MORE"><span>RESUME</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
@@ -299,7 +299,7 @@
                     <p class="footer-links">
                         <a href="#">Navigation: </a>
                         <a href="https://www.haozheli.com">Back to Home</a>
-                        <a href="https://www.haozheli.com/contact">Contact & Subscribe</a>
+                        <a href="https://www.haozheli.com/contact.html">Contact</a>
                         <a href="https://www.haozheli.com/download">Download</a>
                         <a href="https://github.com/Haozhe-Li/Haozhe-Li.github.io/commits/main">Website Log</a>
                     </p>
