--- a/blogs/znotes.html
+++ b/blogs/znotes.html
@@ -458,13 +458,12 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        EXP                   </div>
+                        ZNOTES                   </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        ZNotes Content Contribution                 </p>
-                    <p>In high school, I had a keen interest in physics and did well academically. So I joined Znotes, a global community-led learning platform and helped them create and revise their A2 physics-related notes. As of now, I have written chapters on A2 astrophysics, quantum physics, and atomic physics, and revised electromagnetism as well as thermodynamics.</p>    
+                        In high school, I had a keen interest in physics and did well academically. So I joined Znotes, a global community-led learning platform and helped them create and revise their A2 physics-related notes. As of now, I have written chapters on A2 astrophysics, quantum physics, and atomic physics, and revised electromagnetism as well as thermodynamics.                 </p>    
                     
                     <p><br></p>
 
