--- a/blogs/experience.html
+++ b/blogs/experience.html
@@ -463,11 +463,11 @@
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        ZNotes Content Contribution                 </p>
+                        Please see my experience so far below~                 </p>
 
                     <a href="znotes.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            VIEW MORE
+                            ZNotes Content Contribution
                         </button>
                     </a>
 
