--- a/blogs/education.html
+++ b/blogs/education.html
@@ -467,7 +467,7 @@
 
                     <a href="https://www.haozheli.com/uploads/academicHistory.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            Academic History.html
+                            Academic History
                         </button>
                     </a>
                 </div>
