--- a/contact.html
+++ b/contact.html
@@ -465,7 +465,7 @@
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
                         I am very much looking forward to getting touch with you!                  </p>
 
-                    <a href="mailto: noreply@haozheli.com">
+                    <a href="mailto: contact-noreply@haozheli.com">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
                             EMAIL
                         </button>
