--- a/blogs/intern.html
+++ b/blogs/intern.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>404 Not Found</title>
+<title>Intern</title>
 <link rel="shortcut icon" href="favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -458,16 +458,16 @@
             <div class="w-full md:w-1/2 bg-white flex items-center justify-center">
                 <div class="max-w-sm m-8">
                     <div class="text-black text-5xl md:text-15xl font-black">
-                        404                    </div>
+                        INTERN                    </div>
 
                     <div class="w-16 h-1 bg-purple-light my-3 md:my-6"></div>
 
                     <p class="text-grey-darker text-2xl md:text-3xl font-light mb-8 leading-normal">
-                        Whops! It seems that you have come to a place where I have not yet ventured                  </p>
+                        Nothing Yet! If you have any good idea, please do let me know!                  </p>
 
-                    <a href="https://www.haozheli.com">
+                    <a href="https://www.haozheli.com/contact.html">
                         <button class="bg-transparent text-grey-darkest font-bold uppercase tracking-wide py-3 px-6 border-2 border-grey-light hover:border-grey rounded-lg">
-                            BACK TO HOME
+                            CONTACT
                         </button>
                     </a>
                 </div>
