--- a/CN.html
+++ b/CN.html
@@ -77,7 +77,7 @@
       </div>
     </nav>
 	
-	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.jpeg')">
+	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.png')">
 		<div class="heading">
 			<h1>你好，我是李浩哲</h1>
 			<!--
@@ -91,7 +91,7 @@
 					<b>电影制作</b>
 					<b>调色</b>
 					<b>特效</b>
-                    			<b>演奏大提琴</b>
+                    <b>演奏大提琴</b>
 				</span>
 			</h3>
 		</div>
